[package]
name = "event_driven_ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-rt = "2.9.0"
actix-web = "4.5.1"
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.21"
log-mdc = "0.1.0"
log4rs = "1.3.0"
redis = { version = "0.25.3", features = ["async-std-comp", "tokio", "streams", "json"] }
serde = "1.0.199"
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
